# Simple-Dashboard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1
Client/: CMakeLists.txt
Client/src/common/: Helper.cpp  Helper.h  Logger.cpp  Logger.h  Memory.hpp  TaskManager.hpp  ThreadPool.hpp
Client/src/core/: ClientApp.cpp  ClientApp.h  main.cpp
Client/src/features/: Features.cpp  Features.h
Client/src/features/farmbot/: FarmBot.cpp  FarmBot.h
Client/src/features/main/: Main.cpp  Main.h
Client/src/hack/customGameFunctions/: CustomGameFunctions.cpp  CustomGameFunctions.h
Client/src/hack/gameFunctions/: GameFunctions.cpp  GameFunctions.h
Client/src/hack/globals/: Globals.cpp  Globals.h
Client/src/hack/groundItem/: GroundItem.cpp  GroundItem.h  GroundItemHelper.cpp
Client/src/hack/helper/: Helper.cpp  Helper.h
Client/src/hack/instance/: Instance.cpp  Instance.h  InstanceHelper.cpp
Client/src/hack/item/: Item.cpp  Item.h  ItemHelper.cpp
Client/src/network/: Network.cpp  Network.h
Server/: CMakeLists.txt
Server/src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp
Server/src/Auth/: AuthManager.cpp  AuthManager.h
Server/src/Server/: ServerManager.cpp  ServerManager.h
Server/src/UI/: Theme.h  UIManager.cpp  UIManager.h  View.cpp  View.h
Server/src/UI/Components/: Button.h  Checkbox.h  Component.h  InputText.h  Layout.h  ModalForm.cpp  ModalForm.h  Table.h
Server/src/UI/Views/Dashboard/: Header.cpp  Header.h  Sidebar.cpp  Sidebar.h  View.cpp  View.h
Server/src/UI/Views/Dashboard/Content/: Content.h  MainContent.cpp  MainContent.h
Server/src/UI/Views/Dashboard/Content/FarmBot/: FarmBot.cpp  FarmBot.h
Server/src/UI/Views/Dashboard/Content/Main/: Main.cpp  Main.h
Server/src/UI/Views/Dashboard/Content/Pickup/: Pickup.cpp  Pickup.h
Server/src/UI/Views/Dashboard/Content/SaveLoad/: SaveLoad.cpp  SaveLoad.h
Server/src/UI/Views/Login/: LoginForm.cpp  LoginView.cpp  LoginView.h
Server/src/Utils/Injector/: Injector.cpp  Injector.h  ManualMap.cpp  ManualMap.h
Server/src/Utils/Timer/: Timer.cpp  Timer.h
Server/src/common/: Helper.cpp  Helper.h  Logger.cpp  Logger.h
shared/: BasePackets.h  FracqMath.hpp  Instance.h  Item.h  Memory.h  PacketTypes.h  Settings.h
shared/features/: Farmbot.h  Main.h  Pickup.h
